--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "angular-rellax": "^0.1.3",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^7.0.0",
     "ngx-order-pipe": "^2.1.1",
     "popper.js": "^1.16.1",
+    "rellax": "^1.12.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
