--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "@types/gsap": "^3.0.0",
     "angular-rellax": "^0.1.3",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.5.3",
+    "gsap": "^3.7.1",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^7.0.0",
     "ngx-order-pipe": "^2.1.1",
