--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "popper.js": "^1.16.1",
     "rellax": "^1.12.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.2",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
