--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.0-",
     "@types/gsap": "^3.0.0",
     "angular-rellax": "^0.1.3",
+    "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.5.3",
     "gsap": "^3.7.1",
